<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@mipmap/pic"
    android:orientation="vertical" android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="26dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="136dp"
        android:layout_below="@+id/MusicSeekBar"
        android:layout_toRightOf="@+id/MusicTime"
        android:layout_toEndOf="@+id/MusicTime">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MusicTime"
        android:text="    "
        android:layout_alignBaseline="@+id/MusicStatus"
        android:layout_alignBottom="@+id/MusicStatus"
        android:layout_centerHorizontal="true" />

    <Button
        android:alpha="0.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BtnQuit"
        android:text="@string/退出"
        android:onClick="onClick"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPre"
        android:text="@string/上一曲"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnNext"
        android:text="@string/下一曲"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:id="@+id/MusicSeekBar"
        android:layout_marginBottom="29dp"
        android:layout_above="@+id/btnPre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BtnPlayorPause"
        android:text="@string/btnPlayorPause"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MusicStatus"
        android:text="   "
        android:layout_above="@+id/MusicSeekBar"
        android:layout_toLeftOf="@+id/MusicTime"
        android:layout_toStartOf="@+id/MusicTime"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:alpha="0.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BtnStop"
        android:onClick="onClick"
        android:text="@string/停止"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/BtnQuit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/MusicTime"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/list" />

</RelativeLayout>

